maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:6: error: not found: value esttFaceMur
    if(!esttFaceMur()){
        ^RandomMouseMaze:10: error: not found: value d
        case 2 =>d roite()
                 ^